# time-art

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt  sample_data.json  start-daemon.sh  start.sh
app/utils/: data_cleaner.py  detector.py  predictor.py  sarima_predictor.py
templates/: index.html
tests/: generate_test_data.py
