[project]
name = "time-art"
version = "0.1.0"
description = "Time series prediction and anomaly detection web service"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "flask>=3.0.0",
    "prophet>=1.1.5",
    "pyod==2.0.6",
    "matplotlib>=3.8.0",
    "pandas>=2.2.0",
    "numpy>=1.24.0",
    "werkzeug>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
